--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
     <div id="second-input"></div>
     <div id="result"></div>
     <div id="grid-container">
-      <button class="span-two">AC</button>
-      <button>Delete</button>
-      <button>+</button>
-      <button class="number">1</button>
-      <button class="number">2</button>
-      <button class="number">3</button>
-      <button class="number">4</button>
-      <button class="number">5</button>
-      <button class="number">6</button>
-      <button class="number">7</button>
-      <button class="number">8</button>
-      <button class="number">9</button>
-      <button class="number">0</button>
-      <button>.</button>
-      <button>-</button>
-      <button>/</button>
-      <button>*</button>
-      <button class="span-two">=</button>
+      <button id="all-clear" class="span-two">AC</button>
+      <button id="delete">Delete</button>
+      <button id="plus">+</button>
+      <button id="one">1</button>
+      <button id="two">2</button>
+      <button id="three">3</button>
+      <button id="four">4</button>
+      <button id="five">5</button>
+      <button id="six">6</button>
+      <button id="seven">7</button>
+      <button id="eight">8</button>
+      <button id="nine">9</button>
+      <button id="zero">0</button>
+      <button id="comma">.</button>
+      <button id="minus">-</button>
+      <button id="divide">/</button>
+      <button id="multiply">*</button>
+      <button id="equals" class="span-two">=</button>
     </div>
 
     <script src="app.js"></script>
